cabal-version:      3.0
name:               advent-of-code2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Haisheng W - M
maintainer:         haisheng@mercury.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Day1
                    , Day2
                    , Day3
                    , Day4
                    , Day5
                    , Day14
                    , Day15
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , text
                    , vector
                    , hspec ^>= 2.11
                    , parsec
                    , containers
                    , pretty-simple ^>= 4.1.2
    hs-source-dirs:   src
    default-language: GHC2021

executable advent-of-code2023
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        advent-of-code2023

    hs-source-dirs:   app
    default-language: GHC2021
